# Discord-API-Wrapper-Rust

./: Cargo.toml  eventemitter.rs  run.bat
src/: client.rs  gatewaymessage.rs  lib.rs  macros.rs  main.rs  rest.rs  websocket.rs
src/client/: client.rs  mod.rs
src/client/ws/: manager.rs  mod.rs  shard.rs  term_convert.rs  zlib.rs
src/discors/: client.rs  gatewaymessage.rs  mod.rs  websocket.rs
src/rest/: mod.rs  router.rs
src/structures/: gatewaymessage.rs  jsvalue.rs  mod.rs
tests/: test.rs
