[package]
name = "discors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
eetf = "0.6.0"
inflate = "0.4.5"
surf = "2.3.2"
serde = "1.0.133"
url = "2.2.2"
tokio = { version = "^1.15.0", features = ["rt", "macros", "rt-multi-thread"] }
futures = "0.3.19"
