[package]
name = "discors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26"
eetf = "0.6"
inflate = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
url = "2.2"
tokio = { version = "1.15", features = ["rt", "macros", "rt-multi-thread"] }
